# intrinsic-triangulations-rs

./: Cargo.toml  README.md  distance.csv  faces.csv  visualize.py
src/: lib.rs  main.rs  simple.rs
