[package]
name = "intrinsic-triangles"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]

# For the course
ndarray = "0.15"
ndarray-linalg = "0.14"
sprs = { git = "https://github.com/vbarrielle/sprs/" }
sprs-ldl = { git = "https://github.com/vbarrielle/sprs/" }

# For loading obj files
tobj = "3.2"
